@@ -1,3 +1,8 @@
+2008-02-05  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Coneverted
+	  comment/uncomment to the more common toggle comment logic.
+
 2008-02-04  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Implemented
